# riscv-semantics

./: .cruft.json  .gitignore  .gitmodules  Makefile  README.md  flake.nix  pyproject.toml
.github/actions/with-docker/: Dockerfile  action.yml
.github/workflows/: master.yml  test.yml  update.yml
nix/: README.md
nix/kriscv/: default.nix
scripts/: assemble.py
src/kriscv/: __main__.py  build.py  devtools.py  elf_parser.py  sparse_bytes.py  symtools.py  term_builder.py  term_manip.py  tools.py  utils.py
src/kriscv/kdist/: plugin.py
src/kriscv/kdist/riscv-semantics/: func-test.md  riscv-disassemble.md  riscv-instructions.md  riscv.md  sparse-bytes.md  word.md
src/kriscv/kdist/riscv-semantics/lemmas/: bytes-simplifications.k  bytes-simplifications.md  int-evm-simp.k  int-simplifications-from-evm.k  int-simplifications.k  int-simplifications.md  lemmas.k  sparse-bytes-simplificaitons.md  sparse-bytes-simplifications.md  word-simplifications.md  zkevm-harness-simplifications.md
src/kriscv/kprovex/: __init__.py  _default.py  _kprovex.py  _loader.py  api.py
src/tests/: conftest.py  utils.py
src/tests/integration/: test_config_from_elf.py  test_conformance.py  test_functions.py  test_integration.py  test_prove.py  utils.py
src/tests/integration/riscof/: README.md  config.ini
src/tests/integration/riscof/kriscv/: riscof_kriscv.py
src/tests/integration/riscof/kriscv/env/: model_test.h
src/tests/integration/test-data/: symbolic-config-from-elf.golden
src/tests/integration/test-data/specs/: add-spec.k  byte-offset-bounds-check.k  bytes-concat-consecutive.k  bytes-int-1.k  bytes-int.k  bytes2int-int2bytes.k  int-or-bytes-2s.k  int-spec.k  int2bytes-bytes2int.k  lw-spec.k  pick-drop0.k  pickfront0.k  read-symbolic-index-value.k  signextend.k  store-symbolic-bytes.k  store-symbolic-index-overlap-counter.k  store-symbolic-index-partial-overlap.k  store-symbolic-index-value.k  store-symbolic-value.k  suspect-rhs.k  sw-spec.k  tmp.k  xx.k  yy.k  zkevm-mstore-0.k  zkevm-push.k  zkevm-sload.k  zkevm-sstore.k
src/tests/riscof/: README.md  config.ini
src/tests/riscof/kriscv/: kriscv_isa.yaml  riscof_kriscv.py
src/tests/riscof/kriscv/env/: model_test.h
src/tests/riscof/sail_cSim/: riscof_sail_cSim.py
src/tests/riscof/sail_cSim/env/: model_test.h
src/tests/unit/: test_sparse_bytes.py  test_unit.py
tests/: README.md
tests/riscof/: README.md  config.ini
tests/riscof/kriscv/: kriscv_isa.yaml  riscof_kriscv.py
tests/simple/: add.S  add.S.assert  addi-overflow.S  addi-overflow.S.assert  addi-overflow.S.out  addi.S  addi.S.assert  addi.S.out  and.S  and.S.assert  andi.S  auipc.S  auipc.S.assert  beq.S  beq.S.assert  bge.S  bge.S.assert  bgeu.S  bgeu.S.assert  blt.S  blt.S.assert  bltu.S  bltu.S.assert  bne.S  bne.S.assert  example.S  example.S.out  jal.S  jalr.S  jalr.S.assert  load-store.S  load-store.S.assert  lui.S  lui.S.assert  lui.S.out  or.S  ori.S  ori.S.assert  rem.S  rem.S.assert  (+23 more)
