[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kriscv"
version = "0.1.113"
description = "K tooling for the RISC-V architecture"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "kframework==7.1.267",
    "filelock>=3.14.0,<4",
    "pyelftools>=0.26",
    "pyyaml>=6.0.1,<7",
    "riscof>=1.25.3,<2",
    "riscv-assembler>=1.2.1,<2",
]

[[project.authors]]
name = "Runtime Verification, Inc."
email = "contact@runtimeverification.com"

[project.scripts]
kriscv = "kriscv.__main__:main"
kriscv-asm = "kriscv.devtools:kriscv_asm"

[project.entry-points.kdist]
riscv-semantics = "kriscv.kdist.plugin"

[project.entry-points.kprovex]
riscv = "kriscv.symtools:KRiscVPlugin"

[dependency-groups]
dev = [
    "autoflake",
    "black",
    "flake8",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-quotes",
    "flake8-type-checking",
    "isort",
    "mypy",
    "pep8-naming",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "pyupgrade",
    "types-pyyaml>=6.0.12.20240311",
]

[tool.uv]
override-dependencies = [
    "gitpython>3.1.17,<4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.isort]
profile = "black"
line_length = 120

[tool.autoflake]
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "elftools.*"
ignore_missing_imports = true
